--- a/templates/index.html
+++ b/templates/index.html
@@ -58,61 +58,40 @@
             <h2>Trending</h2>
             <div class="trend-container">
                 <div class="trend-card">
-                    <a href="/product/AYAM%20BERSIH%20-%20STANDARD/Johor"
-                        style="text-decoration: none; color: inherit;">
+                    <div class="trend-content">
                         <h3>AYAM BERSIH - STANDARD</h3>
-                        <p class="price-decrease">{{increments['AYAM BERSIH - STANDARD'] | float | round(2)}}% <i
-                                class="fas fa-arrow-down"></i></p> <!-- Green arrow for increase -->
-                        <button>Watch Market</button>
-                    </a>
+                        <p class="price-decrease">{{increments['AYAM BERSIH - STANDARD'] | float | round(2)}}% <i class="fas fa-arrow-down"></i></p> <!-- Green arrow for decrease -->
+                    </div>
                 </div>
                 <div class="trend-card">
-                    <a href="/product/BAWANG%20BESAR%20IMPORT%20(INDIA)/Johor"
-                        style="text-decoration: none; color: inherit;">
+                    <div class="trend-content">
                         <h3>BAWANG BESAR IMPORT (INDIA)</h3>
-                        <p class="price-decrease">{{increments['BAWANG BESAR IMPORT (INDIA)'] | float | round(2)}}% <i
-                                class="fas fa-arrow-down"></i></p> <!-- Green arrow for increase -->
-                        <button>Watch Market</button>
-                    </a>
+                        <p class="price-decrease">{{increments['BAWANG BESAR IMPORT (INDIA)'] | float | round(2)}}% <i class="fas fa-arrow-down"></i></p> <!-- Green arrow for decrease -->
+                    </div>
                 </div>
                 <div class="trend-card">
-                    <a href="/product/CILI%20KERING%20KERINTING%20(BERTANGKAI%20OR%20TIDAK%20BERTANGKAI)/Johor"
-                        style="text-decoration: none; color: inherit;">
-                        <h3>CILI KERING KERINTING (BERTANGKAI OR TIDAK BERTANGKAI)
-                        </h3>
-                        <p class="price-increase">{{increments['CILI KERING KERINTING (BERTANGKAI OR TIDAK BERTANGKAI)']
-                            | float | round(2)}}% <i class="fas fa-arrow-up"></i></p> <!-- Green arrow for increase -->
-                        <button>Watch Market</button>
-                    </a>
+                    <div class="trend-content">
+                        <h3>CILI KERING KERINTING (BERTANGKAI OR TIDAK BERTANGKAI)</h3>
+                        <p class="price-increase">{{increments['CILI KERING KERINTING (BERTANGKAI OR TIDAK BERTANGKAI)'] | float | round(2)}}% <i class="fas fa-arrow-up"></i></p> <!-- Green arrow for increase -->
+                    </div>
                 </div>
                 <div class="trend-card">
-                    <a href="/product/TELUR%20AYAM%20GRED%20A/Johor" style="text-decoration: none; color: inherit;">
-
+                    <div class="trend-content">
                         <h3>TELUR AYAM GRED A</h3>
-                        <p class="price-decrease">{{increments['TELUR AYAM GRED A'] | float | round(2)}}% <i
-                                class="fas fa-arrow-down"></i></p> <!-- Red arrow for decrease -->
-                        <button>Watch Market</button>
-                    </a>
+                        <p class="price-decrease">{{increments['TELUR AYAM GRED A'] | float | round(2)}}% <i class="fas fa-arrow-down"></i></p> <!-- Red arrow for decrease -->
+                    </div>
                 </div>
                 <div class="trend-card">
-                    <a href="/product/SANTAN%20KELAPA%20SEGAR%20(PEKAT)/Johor"
-                        style="text-decoration: none; color: inherit;">
-
-                        <h3>SANTAN KELAPA SEGAR (PEKAT)
-                        </h3>
-                        <p class="price-increase">{{increments['SANTAN KELAPA SEGAR (PEKAT)'] | float | round(2)}}% <i
-                                class="fas fa-arrow-up"></i></p> <!-- Red arrow for decrease -->
-                        <button>Watch Market</button>
-                    </a>
+                    <div class="trend-content">
+                        <h3>SANTAN KELAPA SEGAR (PEKAT)</h3>
+                        <p class="price-increase">{{increments['SANTAN KELAPA SEGAR (PEKAT)'] | float | round(2)}}% <i class="fas fa-arrow-up"></i></p> <!-- Red arrow for increase -->
+                    </div>
                 </div>
                 <div class="trend-card">
-                    <a href="/product/IKAN%20KEMBUNG%20(ANTARA%208%20HINGGA%2012%20EKOR%20SEKILOGRAM)/Johor"
-                        style="text-decoration: none; color: inherit;">
+                    <div class="trend-content">
                         <h3>IKAN KEMBUNG (ANTARA 8 HINGGA 12 EKOR SEKILOGRAM)</h3>
-                        <p class="price-decrease">{{increments['IKAN KEMBUNG (ANTARA 8 HINGGA 12 EKOR SEKILOGRAM)'] |
-                            float | round(2)}}% <i class="fas fa-arrow-down"></i></p> <!-- Red arrow for decrease -->
-                        <button>Watch Market</button>
-                    </a>
+                        <p class="price-decrease">{{increments['IKAN KEMBUNG (ANTARA 8 HINGGA 12 EKOR SEKILOGRAM)'] | float | round(2)}}% <i class="fas fa-arrow-down"></i></p> <!-- Red arrow for decrease -->
+                    </div>
                 </div>
             </div>
         </section>
