--- a/templates/about.html
+++ b/templates/about.html
@@ -129,7 +129,7 @@
             <ul>
                 <li><a href="{{ url_for('index') }}" class="nav-link">Home</a></li>
                 <li><a href="{{ url_for('item') }}" class="nav-link">Item</a></li>
-                <li><a href="{{ url_for('dataset') }}" class="nav-link">Dataset</a></li>
+                <!-- <!-- <li><a href="{{ url_for('dataset') }}" class="nav-link">Dataset</a></li> --> -->
                 <li><a href="{{ url_for('about') }}" class="nav-link active">About</a></li>
             </ul>
         </nav>
