--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
             <ul>
                 <li><a href="" class="nav-link active">Home</a></li>
                 <li><a href="{{ url_for('item') }}" class="nav-link">Item</a></li>
-                <li><a href="{{ url_for('dataset') }}" class="nav-link">Dataset</a></li>
+                <!-- <li><a href="{{ url_for('dataset') }}" class="nav-link">Dataset</a></li> -->
                 <li><a href="{{ url_for('about') }}" class="nav-link">About</a></li>
             </ul>
             <!-- Day/Night Mode Toggle -->
