--- a/templates/product.html
+++ b/templates/product.html
@@ -293,7 +293,7 @@
             <ul>
                 <li><a href="{{ url_for('index') }}" class="nav-link">Home</a></li>
                 <li><a href="" class="nav-link active">Item</a></li>
-                <li><a href="{{ url_for('dataset') }}" class="nav-link">Dataset</a></li>
+                <!-- <li><a href="{{ url_for('dataset') }}" class="nav-link">Dataset</a></li> -->
                 <li><a href="{{ url_for('about') }}" class="nav-link">About</a></li>
             </ul>
 
