--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
                 <div class="trend-card">
                     <div class="trend-content">
                         <h3>CILI KERING KERINTING (BERTANGKAI OR TIDAK BERTANGKAI)</h3>
-                        <p class="price-increase">{{increments['CILI KERING KERINTING (BERTANGKAI OR TIDAK BERTANGKAI)'] | float | round(2)}}% <i class="fas fa-arrow-up"></i></p> <!-- Green arrow for increase -->
+                        <p class="price-decrease">{{increments['CILI KERING KERINTING (BERTANGKAI OR TIDAK BERTANGKAI)'] | float | round(2)}}% <i class="fas fa-arrow-down"></i></p> <!-- Green arrow for increase -->
                     </div>
                 </div>
                 <div class="trend-card">
@@ -90,7 +90,7 @@
                 <div class="trend-card">
                     <div class="trend-content">
                         <h3>IKAN KEMBUNG (ANTARA 8 HINGGA 12 EKOR SEKILOGRAM)</h3>
-                        <p class="price-decrease">{{increments['IKAN KEMBUNG (ANTARA 8 HINGGA 12 EKOR SEKILOGRAM)'] | float | round(2)}}% <i class="fas fa-arrow-down"></i></p> <!-- Red arrow for decrease -->
+                        <p class="price-increase">{{increments['IKAN KEMBUNG (ANTARA 8 HINGGA 12 EKOR SEKILOGRAM)'] | float | round(2)}}% <i class="fas fa-arrow-up"></i></p> <!-- Red arrow for decrease -->
                     </div>
                 </div>
             </div>
